objects/zkusps__SpecialServices__c.object
<CustomObject>
    <fields>
        <fullName>zkusps__AMDelivery__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AMDelivery</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkusps__AdultSignatureRestrictedDelivery__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Adult Signature Restricted Delivery</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkusps__BpodClientDUNSNumber__c</fullName>
        <description>Mailer ID of the Partner assigned by USPS.
Allows the Partner to receive Electronic Return Receipt information from USPS in an extract file uniquely generated for them, provided they have established themselves with USPS as a Bulk Proof of Delivery Client.</description>
        <label>BpodClientDUNSNumber</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__CodAS3816__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CodAS3816</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkusps__CodOptionalEndorsement__c</fullName>
        <label>CodOptionalEndorsement</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__CodPMExpressReturn__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CodPMExpressReturn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkusps__CodReturnAddress1__c</fullName>
        <label>CodReturnAddress1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__CodReturnAddress2__c</fullName>
        <label>CodReturnAddress2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__CodReturnCity__c</fullName>
        <label>CodReturnCity</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__CodReturnCompany__c</fullName>
        <label>CodReturnCompany</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__CodReturnName__c</fullName>
        <label>CodReturnName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__CodReturnPostalCode__c</fullName>
        <label>CodReturnPostalCode</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__CodReturnState__c</fullName>
        <label>CodReturnState</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__CodUSPSCA__c</fullName>
        <label>CodUSPSCA</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__ElectronicReturnReceipt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Electronic Return Receipt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkusps__InsuredType__c</fullName>
        <label>Insured Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__LiveAnimalSurcharge__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Live Animal Surcharge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkusps__RegisteredMailValue__c</fullName>
        <label>Registered Mail Value</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>zkusps__RegisteredMail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Registered Mail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkusps__SpecialContents__c</fullName>
        <label>Special Contents</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__adultSignature__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Adult Signature</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkusps__allowRecordDelete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Record Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkusps__certifiedMail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Certified Mail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkusps__codAmount__c</fullName>
        <label>COD Amount (USD)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkusps__cod__c</fullName>
        <defaultValue>false</defaultValue>
        <label>COD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkusps__deliveryConfirmation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delivery Confirmation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkusps__insuredMail__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Fee determined by package value. For Express shipments, Insurance included for package valued up to $100</description>
        <inlineHelpText>Fee determined by package value. For Express shipments, Insurance included for package valued up to $100</inlineHelpText>
        <label>Insured Mail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkusps__noDeliveryOnSaturdays__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Delivery on Saturdays</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkusps__restrictedDelivery__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If selected, the shipment&apos;s delivery will be restricted to the recipient specified in the Name field</description>
        <inlineHelpText>If selected, the shipment&apos;s delivery will be restricted to the recipient specified in the Name field</inlineHelpText>
        <label>Restricted Delivery</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkusps__returnReceipt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Return Receipt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkusps__shipment__c</fullName>
        <label>USPS Shipment</label>
        <referenceTo>zkusps__Shipment__c</referenceTo>
        <relationshipName>Special_Services</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>zkusps__signatureConfirmation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Signature Confirmation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkusps__signatureWaiver__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Signature Waiver</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkusps__sundayHolidayDelivery__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sunday/Holiday Delivery</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkusps__zkModKey__c</fullName>
        <label>ZK Mod Key</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>USPS Special Services</label>
    <nameField>
        <displayFormat>Special-Services-{00000000}</displayFormat>
        <label>Special Services Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Special Services</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>